--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"helmet": "^3.13.0",
 		"http-status": "^1.2.0",
 		"jwt-then": "^1.0.1",
-		"mongoose": "^5.9.4"
+		"mongoose": "^5.9.4",
+		"swagger-jsdoc": "^3.5.0",
+		"swagger-ui-express": "^4.1.3"
 	},
 	"devDependencies": {
 		"@types/dotenv": "^4.0.3",
